# audio-input

./: .env.example  .gitignore  .prettierrc  CHANGELOG.md  LICENSE  LOCAL_INSTALL.md  PLAN.md  PRIVACY.md  README.md  RELEASING.md  ROADMAP.md  SPEC.md  TASKS.md  eslint.config.js  fix-accessibility-permissions.sh  fix-permissions.sh  hud.html  index.html  install.sh  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  rust_out  settings.html  tauri.conf.dev.json  tsconfig.json  vite.config.ts  vite.standalone.config.ts  whisper-example.py
.deepseek/: instructions.md
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-bump-version.yml  beta-release.yml  build.yml  integration-tests.yml  release.yml  test-release.yml  test.yml
Casks/: audio-input.rb
docs/: IMK_PLAN.md  accuracy-improvements.md  apple-developer-signing-guide.md  homebrew-tap-setup.md  index.html  local-model-feasibility.md  local-model-fine-tuning.md  macos-distribution-lessons.md  pricing-strategy.md  release-flow-decisions.md  roadmap.md  webkit-hud-window.md
imk-helper/: Package.swift  README.md
imk-helper/Tests/: e2e_smoke.sh
scripts/: bump-version.sh  dev.sh  qwen3_asr_server.py
src/: App.svelte  hud-mount.ts  settings-mount.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.dev.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: latency.rs
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  macos_service.rs  macos_shortcut.rs  main.rs  paste_monitor.rs  screenshot.rs  shortcut.rs  state.rs  tray.rs  usage.rs
src-tauri/src/audio/: encoder.rs  mod.rs  recorder.rs  silence.rs
src-tauri/src/history/: mod.rs
src-tauri/src/input/: injector.rs  mod.rs
src-tauri/src/input/imk/: client.rs  mod.rs  protocol.rs
src-tauri/src/transcription/: gemini.rs  groq.rs  litellm.rs  mod.rs  polish.rs  qwen3_asr.rs  vertex.rs
src-tauri/tests/: recorder_latency.rs  silence_detection.rs
src/lib/: FieldSelect.svelte  MainWindow.svelte  OnboardingFlow.svelte  RecordingIndicator.svelte  SettingsPanel.svelte  app-api.ts  i18n.ts  logger.ts  providers.ts  ui-model.test.ts  ui-model.ts  updater.ts
src/mocks/: tauri-app.ts  (+3 more)
tests/: helpers.ts  mock-tauri.js  recording.spec.ts  settings.spec.ts  transcription.spec.ts
(+8 files in other folders)
