[package]
name = "audio-input"
version = "0.3.5"
edition = "2021"

[lib]
name = "audio_input_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
dirs = "5"
arboard = "3"
screenshots = "0.8"
image = { version = "0.24", default-features = false, features = ["jpeg"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"

[profile.dev]
debug = 1

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
